<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_activity2">MyActivity2</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="title_activity_color">ColorActivity</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_closed">Close</string>
    <string-array name="dialer_numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>*</item>
        <item>0</item>
        <item>#</item>
    </string-array>
    <string name="title_activity_elevation_sample">ElevationSampleActivity</string>
    <string name="default_country_iso_code">af</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="inbox">Inbox</string>
    <string name="add_now">ADD NOW</string>
    <string name="quit">Quit</string>
    <string name="next">Next</string>
    <string name="update">Update</string>
    <string name="error">Error</string>
    <string name="book">Book</string>
    <string name="notes">Notes</string>
    <string name="skip">Skip</string>
    <string name="go">GO</string>
    <string name="menu_support">Support</string>
    <string name="menu_rate_share">Rate &amp; Share</string>
    <string name="menu_activate">Activate</string>
    <string name="cancelled">cancelled</string>
    <string name="you_rated">You rated</string>
    <string name="payment_type">Payment Methods</string>
    <string name="report_an_issue">Contact Support</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="book_now">Book Now</string>
    <string name="error_try_again">Error, please try again later.</string>
    <string name="home_pick_up_default">Choose your pick-up</string>
    <string name="home_drop_off_default">Choose your drop-off</string>
    <string name="home_from">FROM:</string>
    <string name="home_to">TO:</string>
    <string name="home_notes_hint"><i>Notes to driver</i></string>
    <string name="home_type_advance">Pick-up: <b>Now</b></string>
    <string name="home_foot_note">Choose your drop-off above.</string>
    <string name="heading_favourite">Favourites</string>
    <string name="heading_recent">RECENT LOCATIONS</string>
    <string name="heading_local">NEARBY LOCATIONS</string>
    <string name="heading_results">RESULTS</string>
    <string name="search_first_load">Use the text-box above to search for a location</string>
    <string name="frequent_first_load">Most Recent locations and those that you add to Favourites</string>
    <string name="btn_privacy_policy">Privacy Policy</string>
    <string name="btn_terms">Terms of Use</string>
    <string name="register_name_hint">Name</string>
    <string name="register_email_hint">Email</string>
    <string name="register_phone_hint">Phone</string>
    <string name="register_referral_hint">Driver Referral Code</string>
    <string name="btn_register">Register Now</string>
    <string name="register_failed">Registration failed, please check your data and try again</string>
    <string name="register_ok">Thank you. You will receive an activation code shortly.</string>
    <string name="update_failed">Update fail, please check your data and try again</string>
    <string name="update_ok">Your Profile has been successfully updated</string>
    <string name="activation_text_1">We have sent you an SMS with a code to the number below:</string>
    <string name="activation_text_2">Please enter the 4-digit activation code to complete the verification progress</string>
    <string name="activation_resend_button">Resend SMS</string>
    <string name="activation_voice_button">Voice Activation</string>
    <string name="activation_voice_button_loading">Calling Now &#8230;</string>
    <string name="activation_voice_sent">Voice activation successfully requested</string>
    <string name="activation_cservice_select_country">Select Country</string>
    <string name="btn_cancel">Cancel</string>
    <string name="activation_failed">Activation failed, please try again</string>
    <string name="activation_ok">Activation successful.</string>
    <string name="profile_empty_fav">\"Favourite\" your frequent trips for easy one-tap booking</string>
    <string name="profile_empty_history">No booking history yet.</string>
    <string name="trip_cost_range">%1$s%2$s-%3$s</string>
    <string name="trip_cost_fixed">%1$s%2$s</string>
    <string name="time_now">PICKUP NOW</string>
    <string name="picker_error">Please pick a time in the future</string>
    <string name="distance_measure">km</string>
    <string name="text_search_hint">Search&#8230;</string>
    <string name="fare_type_fixed">Fare</string>
    <string name="estimated_fare">Estimated Fare</string>
    <string name="create_booking_please_reregister">We are sorry we need you to re-register your account</string>
    <string name="create_booking">Creating your booking, please wait.</string>
    <string name="create_customer">Creating your account, please wait.</string>
    <string name="activating_customer">Activating your account, please wait.</string>
    <string name="no_internet">No internet!</string>
    <string name="no_connectivity">Are you online? Please check your device\'s connection settings.</string>
    <string name="locating_title">Finding You A Driver</string>
    <string name="locating_driver">Locating your driver, please wait&#8230;</string>
    <string name="locating_bidding">Bidding&#8230;</string>
    <string name="locating_contacting">Contacting&#8230;</string>
    <string name="locating_success_cash_top">Success! We found you a driver</string>
    <string name="locating_success_hi">Hi, my name is</string>
    <string name="locating_success_distance">and I am %1s KM away.</string>
    <string name="locating_success_advance">and I will be your driver</string>
    <string name="locating_success_plate_number">Plate Number</string>
    <string name="locating_success_payment_type">Please Pay By</string>
    <string name="locating_failed_oh_no">Oh No!</string>
    <string name="locating_failed_text">Sorry we couldn\'t find you a driver. Try these:</string>
    <string name="locating_failed_back">Back to home screen</string>
    <string name="locating_failed_retry">@string/retry</string>
    <string name="locating_failed_option_title">What else can you do?</string>
    <string name="locating_failed_option_one">Change your pick-up / drop-off locations</string>
    <string name="locating_failed_option_one_sub">Use recognizable landmarks instead of obscure places. Eg KFC rather than Guan\'s cafe.</string>
    <string name="locating_failed_option_two">Add notes to driver</string>
    <string name="locating_failed_option_two_sub">Help drivers identify your location, especially in huge areas like malls.</string>
    <string name="locating_failed_gc_title">Meet Grabcar!</string>
    <string name="locating_failed_gc__promo_invalid_title">Promo not valid</string>
    <string name="locating_failed_gc_sub">Your affordable, everyday private car service. Ride safe, ride sure.</string>
    <string name="locating_failed_gc__promo_invalid_sub">Your promo code is not valid with this ride.</string>
    <string name="locating_failed_gc_btn">I\'ll try Grabcar</string>
    <string name="locating_failed_gc_without_promo_btn">Try GrabCar without promo</string>
    <string name="locating_failed_gc_validating_btn">Validating&#8230;</string>
    <string name="locating_failed_tips_title">Add Tips</string>
    <string name="locating_failed_tips_title_sub">Adding a tip may encourage more drivers to bid.</string>
    <string name="locating_failed_tips_type">Type</string>
    <string name="locating_failed_tips_type_sub">A different taxi type may be near you!</string>
    <string name="locating_failed_tips_disclaimer">You can reset your promo code, change pickup/dropoff, and taxi type back in the main booking screen.</string>
    <string name="locating_failed_tips_back">Back to main booking screen</string>
    <string name="locating_failed_tips_or">or</string>
    <string name="locating_failed_tips_optional">(Optional)</string>
    <string name="status_assigned">Assigned</string>
    <string name="from_you">from you</string>
    <string name="btn_try_again">Try Again</string>
    <string name="share_your_trip_with">Share your ride via</string>
    <string name="advance_booking_reminder">We will remind you of this booking, <b>30 MIN</b> before the set pickup time.</string>
    <string name="cancelled_booking_reminder">This booking has been cancelled.</string>
    <string name="complete_trip_how_ride">How was your ride\?</string>
    <string name="submit_button">Submit</string>
    <string name="cancel_booking_resend">Sorry, we failed to complete your cancel request.\n\nResend?</string>
    <string name="menu_cancel_trip">Cancel Booking</string>
    <string name="booking_cancelled">Your booking has been cancelled.</string>
    <string name="onboard_with">In Transit</string>
    <string name="pref_history_title">History</string>
    <string name="btn_call_driver">Contact Driver</string>
    <string name="failed_to_load_booking">Failed to load booking</string>
    <string name="text_search_no_results">No results found.\n\nTry another keyword, or use a different provider below.</string>
    <string name="error_connect_to_server">Connection to the server failed! Please check your Internet connection and try again.</string>
    <string name="remove_account_ok">Your account details have been removed from this device</string>
    <string name="major_update_available">A major update is available in the Play Store. You must update the app to continue.</string>
    <string name="beta_update_available">A new Beta Update is available. Please update your app thru our Beta Channel.</string>
    <string name="call_driver">Call</string>
    <string name="edit_profile_text">You will have to re-activate your account for the changes to take effect.</string>
    <string name="register_terms_and_condition_agreement">By registering, I have read and agreed to the\n<![CDATA[<a href="http://grabtaxi.com/terms.html">Terms of Use</a> and the <a href="http://grabtaxi.com/privacy.html">Privacy Policy</a>]]></string>
    <string name="places_provider_frequent">FREQUENT</string>
    <string name="places_provider_map">MAP</string>
    <string name="places_provider_poi_service">PLACES</string>
    <string name="places_provider_google">GOOGLE</string>
    <string name="places_provider_foursquare">FOURSQUARE</string>
    <string name="promo_code">Promo Code</string>
    <string name="promo_code_instruction">Please enter a valid promo code</string>
    <string name="promo_code_cancellation">Are you sure you want to remove the promo code?</string>
    <string name="promo_code_validation">Validating your promo code&#8230;</string>
    <string name="continue_text">Continue</string>
    <string name="promo_code_is_invalid">The promo code that you entered is invalid.</string>
    <string name="promo_code_cancel_message">Please try again or continue without promo code.</string>
    <string name="taxi_list_loading">Loading vehicle and service types&#8230;\nPlease Wait</string>
    <string name="taxi_type_failed_to_load">Hmmm, something went wrong.\nTap to retry</string>
    <string name="btn_confirm_booking">Confirm Booking?</string>
    <string name="referral_code_msg">We would like to reward you and the awesome person who referred you</string>
    <string name="booking_shared_elements_transition_name">Booking Shared</string>
</resources>